# osrm-tag-rewriter

./: .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  deps.sh  exit2destination.cc  main.cc  masonize.sh  rewriter.h
src/: destinations.h  exits.h  main.cc  util.h
tests/: README.md  check.sh  rewrite.feature
tests/negative/: 115_tag_already_present.osm  118_destination_tag_already_present.osm  136_ref_tag_already_present.osm  138_destination_ref_tag_already_present.osm  29_left_and_right_exits_not_supported_only_a_few_hundred_left_right.osm  32_left_and_right_exits_not_supported_only_a_few_hundred_:left_:right_namespaced_keys.osm  52_not_a_motorway_junction_node.osm  55_not_a_motorway_junction_node.osm  73_not_a_link_road.osm  76_not_a_link_road.osm  94_not_a_oneway_link.osm  97_not_a_oneway_link.osm
tests/positive/: 11_successful_rewrite.osm  157_reversed_way.osm  8_successful_rewrite.osm
